--- a/index.html
+++ b/index.html
@@ -65,134 +65,147 @@
                     <div class="profile">
                         <span class="welcome">Hello
                           <span class="triangle"></span>
-                        </span>
-                        <h1>王峥</h1>
-                        <p>前端开发工程师</p>
-                        <hr>
-                        <dl>
-                            <dt>年龄</dt>
-                            <dd>26</dd>
-                            <dt>所在城市</dt>
-                            <dd>北京</dd>
-                            <dt>邮箱</dt>
-                            <dd>w87344666@gmail.com</dd>
-                            <dt>手机</dt>
-                            <dd>18222374657</dd>
-                        </dl>
-                    </div>
+                      </span>
+                      <h1>王峥</h1>
+                      <p>前端开发工程师</p>
+                      <hr>
+                      <dl>
+                        <dt>年龄</dt>
+                        <dd>26</dd>
+                        <dt>所在城市</dt>
+                        <dd>北京</dd>
+                        <dt>邮箱</dt>
+                        <dd>w87344666@gmail.com</dd>
+                        <dt>手机</dt>
+                        <dd>18222374657</dd>
+                    </dl>
                 </div>
             </div>
-            <footer class="media">
-                <a href="#">
-                    <svg class="icon" aria-hidden="true">
-                   <use xlink:href="#icon-hexo"></use>
-               </svg>
-                </a>
-                <a href="#">
-                    <svg class="icon" aria-hidden="true">
-               <use xlink:href="#icon-github"></use>
-           </svg>
-                </a>
-                <a href="#">
-                    <svg class="icon" aria-hidden="true">
-           <use xlink:href="#icon-weibo1"></use>
-       </svg>
-                </a>
-                <a href="#">
-                    <svg class="icon" aria-hidden="true">
-       <use xlink:href="#icon-zhihu0"></use>
-   </svg>
-                </a>
-                <a href="#">
-                    <svg class="icon" aria-hidden="true">
-       <use xlink:href="#icon-twitter"></use>
-   </svg>
-                </a>
-            </footer>
         </div>
-        <p class="downloadResume-wrapper">
-            <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
-        </p>
-        <p class="intro">
-            王峥， 前端工程师。<br> 技能：前端开发，Vue 开发，Node.js 开发
-        </p>
+        <footer class="media">
+            <a href="#">
+                <svg class="icon" aria-hidden="true">
+                 <use xlink:href="#icon-hexo"></use>
+             </svg>
+         </a>
+         <a href="#">
+            <svg class="icon" aria-hidden="true">
+             <use xlink:href="#icon-github"></use>
+         </svg>
+     </a>
+     <a href="#">
+        <svg class="icon" aria-hidden="true">
+         <use xlink:href="#icon-weibo1"></use>
+     </svg>
+ </a>
+ <a href="#">
+    <svg class="icon" aria-hidden="true">
+     <use xlink:href="#icon-zhihu0"></use>
+ </svg>
+</a>
+<a href="#">
+    <svg class="icon" aria-hidden="true">
+     <use xlink:href="#icon-twitter"></use>
+ </svg>
+</a>
+</footer>
+</div>
+<p class="downloadResume-wrapper">
+    <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
+</p>
+<p class="intro">
+    王峥， 前端工程师。<br> 技能：前端开发，Vue 开发，Node.js 开发
+</p>
 
-    </main>
-    <section data-x id="siteSkill" class="skills">
-        <h2>技能</h2>
-        <ol class="clearfix">
-            <li>
-                <h3>
-                    HTML 5 &amp; CSS 3
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 60%;"></div>
-                </div>
-            </li>
-            <li>
-                <h3>
-                    JavaScript
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 50%"></div>
-                </div>
-            </li>
-            <li>
-                <h3>
-                    jQuery
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 60%"></div>
-                </div>
-            </li>
-            <li>
-                <h3>
-                    Vue.js
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 40%"></div>
-                </div>
-            </li>
-            <li>
-                <h3>
-                    React.js
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 50%"></div>
-                </div>
-            </li>
-            <li>
-                <h3>
-                    Node.js
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 60%"></div>
-                </div>
-            </li>
-        </ol>
-    </section>
-    <section data-x id="siteWorks" class="portfolio">
-        <h2>作品集</h2>
-        <div id="mySlides">
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <img src="/img/works/bookmark.jpg" alt="加载失败" class="swiper-slide" width="668">
-                    <img src="/img/works/canvas.png" alt="加载失败" class="swiper-slide" width="668">
-                    <img src="/img/works/apple-style-slides.jpg" alt="加载失败" class="swiper-slide" width="668">
-                </div>
-                <!-- 如果需要分页器 -->
-                <div class="swiper-pagination"></div>
+</main>
+<section data-x id="siteSkill" class="skills">
+    <h2>技能</h2>
+    <ol class="clearfix">
+        <li>
+            <h3>
+                HTML 5 &amp; CSS 3
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 60%;"></div>
             </div>
-            <!-- 如果需要导航按钮 -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+        </li>
+        <li>
+            <h3>
+                JavaScript
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 50%"></div>
+            </div>
+        </li>
+        <li>
+            <h3>
+                jQuery
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 60%"></div>
+            </div>
+        </li>
+        <li>
+            <h3>
+                Vue.js
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 40%"></div>
+            </div>
+        </li>
+        <li>
+            <h3>
+                React.js
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 50%"></div>
+            </div>
+        </li>
+        <li>
+            <h3>
+                Node.js
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 60%"></div>
+            </div>
+        </li>
+    </ol>
+</section>
+<section data-x id="siteWorks" class="portfolio">
+    <h2>作品集</h2>
+    <div id="mySlides">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <img src="/img/works/bookmark.jpg" alt="加载失败" class="swiper-slide" width="668">
+                <img src="/img/works/canvas.png" alt="加载失败" class="swiper-slide" width="668">
+                <img src="/img/works/apple-style-slides.jpg" alt="加载失败" class="swiper-slide" width="668">
+            </div>
+            <!-- 如果需要分页器 -->
+            <div class="swiper-pagination"></div>
         </div>
-    </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
-    <script src="./js/init-swiper.js"></script>
-    <script src="./js/auto-slide-up.js"></script>
-    <script src="./js/smoothly-navigation.js"></script>
-    <script src="./js/sticky-topbar.js"></script>
+        <!-- 如果需要导航按钮 -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+</section>
+<section class="message">
+    <h2>留言</h2>
+    <ol id="messageList"></ol>
+    <form id="postMessageForm" style="width: 700px; margin: 50px auto;">
+      <label for="">姓名</label>
+      <input type="text" name="name">
+      <label for="">内容</label>
+      <input type="text" name="content">
+      <input type="submit" value="提交">
+  </form>
+</section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
+<script src="//cdn1.lncld.net/static/js/3.6.8/av-min.js"></script>
+<script src="./js/message.js"></script>
+<script src="./js/init-swiper.js"></script>
+<script src="./js/auto-slide-up.js"></script>
+<script src="./js/smoothly-navigation.js"></script>
+<script src="./js/sticky-topbar.js"></script>
 </body>
 
 </html>
